# phong-lighting-model-example

./: CMakeLists.txt  README.md
shaders/: cube.fragment  cube.vertex  lamp.fragment
src/: cube.cpp  cube.h  gui.h  main.cpp  shader.h
src/imgui/: imgui_impl_opengl3.h
